test: 테스트 케이스 추가 및 리펙토링